{
  "version": 4,
  "terraform_version": "0.14.5",
  "serial": 611,
  "lineage": "741081b9-65f3-88b0-5247-c15ee7c31916",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_application_gateway",
      "name": "appgateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "authentication_certificate": [],
            "autoscale_configuration": [],
            "backend_address_pool": [
              {
                "fqdns": null,
                "id": "/subscriptions/557a7337-8954-4d3e-9ae3-e2d38bd6f9ec/resourceGroups/hub-vnet-rg/providers/Microsoft.Network/applicationGateways/appgateway/backendAddressPools/hub-vnet-beap",
                "ip_addresses": null,
                "name": "hub-vnet-beap"
              }
            ],
            "backend_http_settings": [
              {
                "affinity_cookie_name": "",
                "authentication_certificate": [],
                "connection_draining": [],
                "cookie_based_affinity": "Disabled",
                "host_name": "",
                "id": "/subscriptions/557a7337-8954-4d3e-9ae3-e2d38bd6f9ec/resourceGroups/hub-vnet-rg/providers/Microsoft.Network/applicationGateways/appgateway/backendHttpSettingsCollection/hub-vnet-be-htst",
                "name": "hub-vnet-be-htst",
                "path": "/path1/",
                "pick_host_name_from_backend_address": false,
                "port": 80,
                "probe_id": "",
                "probe_name": "",
                "protocol": "Http",
                "request_timeout": 60,
                "trusted_root_certificate_names": null
              }
            ],
            "custom_error_configuration": [],
            "enable_http2": false,
            "firewall_policy_id": null,
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/557a7337-8954-4d3e-9ae3-e2d38bd6f9ec/resourceGroups/hub-vnet-rg/providers/Microsoft.Network/applicationGateways/appgateway/frontendIPConfigurations/hub-vnet-feip",
                "name": "hub-vnet-feip",
                "private_ip_address": "",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/557a7337-8954-4d3e-9ae3-e2d38bd6f9ec/resourceGroups/hub-vnet-rg/providers/Microsoft.Network/publicIPAddresses/app-gateway-pip",
                "subnet_id": ""
              }
            ],
            "frontend_port": [
              {
                "id": "/subscriptions/557a7337-8954-4d3e-9ae3-e2d38bd6f9ec/resourceGroups/hub-vnet-rg/providers/Microsoft.Network/applicationGateways/appgateway/frontendPorts/hub-vnet-feport",
                "name": "hub-vnet-feport",
                "port": 80
              }
            ],
            "gateway_ip_configuration": [
              {
                "id": "/subscriptions/557a7337-8954-4d3e-9ae3-e2d38bd6f9ec/resourceGroups/hub-vnet-rg/providers/Microsoft.Network/applicationGateways/appgateway/gatewayIPConfigurations/my-gateway-ip-configuration",
                "name": "my-gateway-ip-configuration",
                "subnet_id": "/subscriptions/557a7337-8954-4d3e-9ae3-e2d38bd6f9ec/resourceGroups/hub-vnet-rg/providers/Microsoft.Network/virtualNetworks/hub-vnet/subnets/appgateway"
              }
            ],
            "http_listener": [
              {
                "custom_error_configuration": [],
                "firewall_policy_id": "",
                "frontend_ip_configuration_id": "/subscriptions/557a7337-8954-4d3e-9ae3-e2d38bd6f9ec/resourceGroups/hub-vnet-rg/providers/Microsoft.Network/applicationGateways/appgateway/frontendIPConfigurations/hub-vnet-feip",
                "frontend_ip_configuration_name": "hub-vnet-feip",
                "frontend_port_id": "/subscriptions/557a7337-8954-4d3e-9ae3-e2d38bd6f9ec/resourceGroups/hub-vnet-rg/providers/Microsoft.Network/applicationGateways/appgateway/frontendPorts/hub-vnet-feport",
                "frontend_port_name": "hub-vnet-feport",
                "host_name": "",
                "host_names": null,
                "id": "/subscriptions/557a7337-8954-4d3e-9ae3-e2d38bd6f9ec/resourceGroups/hub-vnet-rg/providers/Microsoft.Network/applicationGateways/appgateway/httpListeners/hub-vnet-httplstn",
                "name": "hub-vnet-httplstn",
                "protocol": "Http",
                "require_sni": false,
                "ssl_certificate_id": "",
                "ssl_certificate_name": ""
              }
            ],
            "id": "/subscriptions/557a7337-8954-4d3e-9ae3-e2d38bd6f9ec/resourceGroups/hub-vnet-rg/providers/Microsoft.Network/applicationGateways/appgateway",
            "identity": [],
            "location": "westus",
            "name": "appgateway",
            "probe": [],
            "redirect_configuration": [],
            "request_routing_rule": [
              {
                "backend_address_pool_id": "/subscriptions/557a7337-8954-4d3e-9ae3-e2d38bd6f9ec/resourceGroups/hub-vnet-rg/providers/Microsoft.Network/applicationGateways/appgateway/backendAddressPools/hub-vnet-beap",
                "backend_address_pool_name": "hub-vnet-beap",
                "backend_http_settings_id": "/subscriptions/557a7337-8954-4d3e-9ae3-e2d38bd6f9ec/resourceGroups/hub-vnet-rg/providers/Microsoft.Network/applicationGateways/appgateway/backendHttpSettingsCollection/hub-vnet-be-htst",
                "backend_http_settings_name": "hub-vnet-be-htst",
                "http_listener_id": "/subscriptions/557a7337-8954-4d3e-9ae3-e2d38bd6f9ec/resourceGroups/hub-vnet-rg/providers/Microsoft.Network/applicationGateways/appgateway/httpListeners/hub-vnet-httplstn",
                "http_listener_name": "hub-vnet-httplstn",
                "id": "/subscriptions/557a7337-8954-4d3e-9ae3-e2d38bd6f9ec/resourceGroups/hub-vnet-rg/providers/Microsoft.Network/applicationGateways/appgateway/requestRoutingRules/hub-vnet-rqrt",
                "name": "hub-vnet-rqrt",
                "redirect_configuration_id": "",
                "redirect_configuration_name": "",
                "rewrite_rule_set_id": "",
                "rewrite_rule_set_name": "",
                "rule_type": "Basic",
                "url_path_map_id": "",
                "url_path_map_name": ""
              }
            ],
            "resource_group_name": "hub-vnet-rg",
            "rewrite_rule_set": [],
            "sku": [
              {
                "capacity": 2,
                "name": "Standard_Small",
                "tier": "Standard"
              }
            ],
            "ssl_certificate": [],
            "ssl_policy": [
              {
                "cipher_suites": [],
                "disabled_protocols": [],
                "min_protocol_version": "",
                "policy_name": "AppGwSslPolicy20150501",
                "policy_type": "Predefined"
              }
            ],
            "tags": null,
            "timeouts": null,
            "trusted_root_certificate": [],
            "url_path_map": [],
            "waf_configuration": [],
            "zones": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_public_ip.app-gateway-pip",
            "azurerm_resource_group.hub-vnet-rg",
            "azurerm_subnet.app-gateway",
            "azurerm_virtual_network.hub-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "hub-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": true,
            "id": "/subscriptions/557a7337-8954-4d3e-9ae3-e2d38bd6f9ec/resourceGroups/hub-vnet-rg/providers/Microsoft.Network/networkInterfaces/hub-nic",
            "internal_domain_name_suffix": "e5ysdfyso0letlrncc4u2zctya.dx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "hub",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/557a7337-8954-4d3e-9ae3-e2d38bd6f9ec/resourceGroups/hub-vnet-rg/providers/Microsoft.Network/virtualNetworks/hub-vnet/subnets/ManagementSubnet"
              }
            ],
            "location": "westus",
            "name": "hub-nic",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "hub-vnet-rg",
            "tags": {
              "environment": "hub"
            }
          },
          "dependencies": [
            "azurerm_resource_group.hub-vnet-rg",
            "azurerm_subnet.hub-mgmt",
            "azurerm_virtual_network.hub-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "app-gateway-pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/557a7337-8954-4d3e-9ae3-e2d38bd6f9ec/resourceGroups/hub-vnet-rg/providers/Microsoft.Network/publicIPAddresses/app-gateway-pip",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "westus",
            "name": "app-gateway-pip",
            "resource_group_name": "hub-vnet-rg",
            "sku": "Basic"
          },
          "dependencies": [
            "azurerm_resource_group.hub-vnet-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "firewall-pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/557a7337-8954-4d3e-9ae3-e2d38bd6f9ec/resourceGroups/hub-vnet-rg/providers/Microsoft.Network/publicIPAddresses/firewallpip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "13.64.174.121",
            "ip_version": "IPv4",
            "location": "westus",
            "name": "firewallpip",
            "resource_group_name": "hub-vnet-rg",
            "sku": "Standard"
          },
          "dependencies": [
            "azurerm_resource_group.hub-vnet-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "hub-vpn-gateway1-pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/557a7337-8954-4d3e-9ae3-e2d38bd6f9ec/resourceGroups/hub-vnet-rg/providers/Microsoft.Network/publicIPAddresses/hub-vpn-gateway1-pip",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "westus",
            "name": "hub-vpn-gateway1-pip",
            "resource_group_name": "hub-vnet-rg",
            "sku": "Basic"
          },
          "dependencies": [
            "azurerm_resource_group.hub-vnet-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "ad-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.1.0/26",
            "address_prefixes": [
              "10.0.1.0/26"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/557a7337-8954-4d3e-9ae3-e2d38bd6f9ec/resourceGroups/hub-vnet-rg/providers/Microsoft.Network/virtualNetworks/hub-vnet/subnets/ActiveDirectorySubnet",
            "name": "ActiveDirectorySubnet",
            "resource_group_name": "hub-vnet-rg",
            "virtual_network_name": "hub-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.hub-vnet-rg",
            "azurerm_virtual_network.hub-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "app-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.0.192/26",
            "address_prefixes": [
              "10.0.0.192/26"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/557a7337-8954-4d3e-9ae3-e2d38bd6f9ec/resourceGroups/hub-vnet-rg/providers/Microsoft.Network/virtualNetworks/hub-vnet/subnets/appgateway",
            "name": "appgateway",
            "resource_group_name": "hub-vnet-rg",
            "virtual_network_name": "hub-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.hub-vnet-rg",
            "azurerm_virtual_network.hub-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "app-gateway-backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.0.80/28",
            "address_prefixes": [
              "10.0.0.80/28"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/557a7337-8954-4d3e-9ae3-e2d38bd6f9ec/resourceGroups/hub-vnet-rg/providers/Microsoft.Network/virtualNetworks/hub-vnet/subnets/apbackend",
            "name": "apbackend",
            "resource_group_name": "hub-vnet-rg",
            "virtual_network_name": "hub-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.hub-vnet-rg",
            "azurerm_virtual_network.hub-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "hub-dmz",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.0.128/26",
            "address_prefixes": [
              "10.0.0.128/26"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/557a7337-8954-4d3e-9ae3-e2d38bd6f9ec/resourceGroups/hub-vnet-rg/providers/Microsoft.Network/virtualNetworks/hub-vnet/subnets/AzureFirewallSubnet",
            "name": "AzureFirewallSubnet",
            "resource_group_name": "hub-vnet-rg",
            "virtual_network_name": "hub-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.hub-vnet-rg",
            "azurerm_virtual_network.hub-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "hub-gateway-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.0.0/26",
            "address_prefixes": [
              "10.0.0.0/26"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/557a7337-8954-4d3e-9ae3-e2d38bd6f9ec/resourceGroups/hub-vnet-rg/providers/Microsoft.Network/virtualNetworks/hub-vnet/subnets/GatewaySubnet",
            "name": "GatewaySubnet",
            "resource_group_name": "hub-vnet-rg",
            "virtual_network_name": "hub-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.hub-vnet-rg",
            "azurerm_virtual_network.hub-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "hub-mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.2.0/24",
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/557a7337-8954-4d3e-9ae3-e2d38bd6f9ec/resourceGroups/hub-vnet-rg/providers/Microsoft.Network/virtualNetworks/hub-vnet/subnets/ManagementSubnet",
            "name": "ManagementSubnet",
            "resource_group_name": "hub-vnet-rg",
            "virtual_network_name": "hub-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.hub-vnet-rg",
            "azurerm_virtual_network.hub-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "hub-vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "guid": "9721f127-7612-4996-ae2d-10bd4e6453c0",
            "id": "/subscriptions/557a7337-8954-4d3e-9ae3-e2d38bd6f9ec/resourceGroups/hub-vnet-rg/providers/Microsoft.Network/virtualNetworks/hub-vnet",
            "location": "westus",
            "name": "hub-vnet",
            "resource_group_name": "hub-vnet-rg",
            "tags": {
              "environment": "hub-environment"
            }
          },
          "dependencies": [
            "azurerm_resource_group.hub-vnet-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_gateway",
      "name": "hub-vnet-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "active_active": false,
            "bgp_settings": [
              {
                "asn": 65515,
                "peer_weight": 0,
                "peering_address": "10.0.0.62"
              }
            ],
            "enable_bgp": false,
            "generation": "Generation1",
            "id": "/subscriptions/557a7337-8954-4d3e-9ae3-e2d38bd6f9ec/resourceGroups/hub-vnet-rg/providers/Microsoft.Network/virtualNetworkGateways/hub-vpn-gateway1",
            "ip_configuration": [
              {
                "name": "vnetGatewayConfig",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/557a7337-8954-4d3e-9ae3-e2d38bd6f9ec/resourceGroups/hub-vnet-rg/providers/Microsoft.Network/publicIPAddresses/hub-vpn-gateway1-pip",
                "subnet_id": "/subscriptions/557a7337-8954-4d3e-9ae3-e2d38bd6f9ec/resourceGroups/hub-vnet-rg/providers/Microsoft.Network/virtualNetworks/hub-vnet/subnets/GatewaySubnet"
              }
            ],
            "location": "westus",
            "name": "hub-vpn-gateway1",
            "resource_group_name": "hub-vnet-rg",
            "sku": "VpnGw1",
            "type": "Vpn",
            "vpn_type": "RouteBased"
          },
          "dependencies": [
            "azurerm_public_ip.hub-vpn-gateway1-pip",
            "azurerm_resource_group.hub-vnet-rg",
            "azurerm_subnet.hub-gateway-subnet",
            "azurerm_virtual_network.hub-vnet"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "vm",
      "provider": "module.compute.provider[\"registry.terraform.io/hashicorp/azurerm\"]"
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "vm",
      "provider": "module.compute.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/557a7337-8954-4d3e-9ae3-e2d38bd6f9ec/resourceGroups/spoke-rg/providers/Microsoft.Network/networkSecurityGroups/myvm-3389-nsg",
            "location": "westus",
            "name": "myvm-3389-nsg",
            "resource_group_name": "spoke-rg",
            "security_rule": [],
            "tags": {
              "source": "terraform",
              "tag1": "",
              "tag2": ""
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.azurerm_resource_group.network"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "vm",
      "provider": "module.compute.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "Allow remote protocol in from all locations",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "3389",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/557a7337-8954-4d3e-9ae3-e2d38bd6f9ec/resourceGroups/spoke-rg/providers/Microsoft.Network/networkSecurityGroups/myvm-3389-nsg/securityRules/allow_remote_3389_in_all",
            "name": "allow_remote_3389_in_all",
            "network_security_group_name": "myvm-3389-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "spoke-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.compute.azurerm_network_security_group.vm",
            "module.network.azurerm_resource_group.network"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_prefix": "192.168.1.0/27",
            "address_prefixes": [
              "192.168.1.0/27"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/557a7337-8954-4d3e-9ae3-e2d38bd6f9ec/resourceGroups/spoke-rg/providers/Microsoft.Network/virtualNetworks/spoke-vnet/subnets/subnet1",
            "name": "subnet1",
            "resource_group_name": "spoke-rg",
            "virtual_network_name": "spoke-vnet"
          },
          "dependencies": [
            "module.network.azurerm_resource_group.network",
            "module.network.azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "address_prefix": "192.168.2.0/27",
            "address_prefixes": [
              "192.168.2.0/27"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/557a7337-8954-4d3e-9ae3-e2d38bd6f9ec/resourceGroups/spoke-rg/providers/Microsoft.Network/virtualNetworks/spoke-vnet/subnets/subnet2",
            "name": "subnet2",
            "resource_group_name": "spoke-rg",
            "virtual_network_name": "spoke-vnet"
          },
          "dependencies": [
            "module.network.azurerm_resource_group.network",
            "module.network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "192.168.0.0/16"
            ],
            "guid": "96e1d467-f24f-48d4-bfe5-80a464c4398c",
            "id": "/subscriptions/557a7337-8954-4d3e-9ae3-e2d38bd6f9ec/resourceGroups/spoke-rg/providers/Microsoft.Network/virtualNetworks/spoke-vnet",
            "location": "westus",
            "name": "spoke-vnet",
            "resource_group_name": "spoke-rg",
            "tags": {
            }
          },
          "dependencies": [
            "module.network.azurerm_resource_group.network"
          ]
        }
      ]
    },
    {
      "module": "module.vnet-peering",
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "peering_dest",
      "provider": "module.vnet-peering.provider[\"registry.terraform.io/hashicorp/azurerm\"].dest",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": false,
            "id": "/subscriptions/557a7337-8954-4d3e-9ae3-e2d38bd6f9ec/resourceGroups/spoke-rg/providers/Microsoft.Network/virtualNetworks/spoke-vnet/virtualNetworkPeerings/peering-to-hub-vnet",
            "name": "peering-to-hub-vnet",
            "remote_virtual_network_id": "/subscriptions/557a7337-8954-4d3e-9ae3-e2d38bd6f9ec/resourceGroups/hub-vnet-rg/providers/Microsoft.Network/virtualNetworks/hub-vnet",
            "resource_group_name": "spoke-rg",
            "use_remote_gateways": false,
            "virtual_network_name": "spoke-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.hub-vnet-rg",
            "azurerm_virtual_network.hub-vnet",
            "module.network.azurerm_resource_group.network",
            "module.network.azurerm_virtual_network.vnet",
            "module.vnet-peering.data.azurerm_client_config.current_config"
          ]
        }
      ]
    },
    {
      "module": "module.vnet-peering",
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "peering_src",
      "provider": "module.vnet-peering.provider[\"registry.terraform.io/hashicorp/azurerm\"].src",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": false,
            "id": "/subscriptions/557a7337-8954-4d3e-9ae3-e2d38bd6f9ec/resourceGroups/hub-vnet-rg/providers/Microsoft.Network/virtualNetworks/hub-vnet/virtualNetworkPeerings/peering-to-spoke-vnet",
            "name": "peering-to-spoke-vnet",
            "remote_virtual_network_id": "/subscriptions/557a7337-8954-4d3e-9ae3-e2d38bd6f9ec/resourceGroups/spoke-rg/providers/Microsoft.Network/virtualNetworks/spoke-vnet",
            "resource_group_name": "hub-vnet-rg",
            "use_remote_gateways": false,
            "virtual_network_name": "hub-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.hub-vnet-rg",
            "azurerm_virtual_network.hub-vnet",
            "module.network.azurerm_resource_group.network",
            "module.network.azurerm_virtual_network.vnet",
            "module.vnet-peering.data.azurerm_client_config.current_config"
          ]
        }
      ]
    }
  ]
}